Update benchmarking/cui-benchmarking-common/src/main/java/de/cuioss/benchmarking/processor/BenchmarkResultProcessor.java
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>